--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+        <!-- open-iconic -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" integrity="sha256-BJ/G+e+y7bQdrYkS2RBTyNfBHpA9IuGaPmf9htub5MQ=" crossorigin="anonymous" />
+
         <link rel="stylesheet" href="/static/css/styles.css">
     </head>
     <body>
@@ -73,6 +76,27 @@
             </div>
 
             <div id="home" class="d-none">
+                <div class="modal fade" id="commentsModalLong" tabindex="-1" role="dialog" aria-labelledby="commentsModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="commentsModalLongTitle">Modal title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div id="comments-container"></div>
+                                <textarea class="form-control mt-3" placeholder="Add a review..."></textarea>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="post-comment" type="button" class="btn btn-primary">Post</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <form class="mx-auto mb-3 form-inline">
                     <div class="form-group ml-auto">
                         <input name="keyword" type="text" class="form-control" placeholder="Search by keyword" autofocus>
@@ -87,6 +111,7 @@
                             <th scope="col">Title</th>
                             <th scope="col">Author</th>
                             <th scope="col">Year</th>
+                            <th scope="col">Comments</th>
                         </tr>
                     </thead>
                     <tbody>
