--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
+                                <div id="no-comments" class="d-none text-center">No reviews yet</div>
                                 <div id="comments-container"></div>
                                 <textarea class="form-control mt-3" placeholder="Add a review..."></textarea>
                             </div>
